Fix tests for Driver Service